scrollbar mozzila fixed, Roboto font tooltip transtition component

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"); */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	scrollbar-width: 0;
-
+	scrollbar-width: none;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 ::-webkit-scrollbar {
 	display: none;
