--- a/src/comp/Profile/Profile.css
+++ b/src/comp/Profile/Profile.css
@@ -10,8 +10,7 @@
 	border-radius: 5px;
 	background-color: #161616;
 	width: fit-content;
-	/* margin-bottom: 10px; */
-	transform: translate(-50%, -135%);
+	transform: translate(-50%, -132%);
 	box-shadow: 0 0 5px black;
 }
 .accountInfo a {
